<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventCreatorMainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col_on_primary"
    tools:context=".event.ui.MainFragment">

    <Button
        android:id="@+id/buttonEventAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/col_primary_variant"
        android:text="@string/create_event_button_text"
        android:textColor="@color/col_on_primary"
        android:textColorHighlight="@color/col_on_secondary"
        android:textColorLink="@color/col_primary_variant"
        android:translationY="-5dp"
        app:cornerRadius="40px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.578" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="450dp"
        app:cardBackgroundColor="@color/col_on_primary"
        app:cardCornerRadius="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691">

        <CheckBox
            android:id="@+id/checkGeolocation"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/col_primary_variant"
            android:text="@string/use_geolocation"
            android:textColor="@color/col_on_secondary"
            android:textSize="18dp"
            android:translationX="8dp"
            android:translationY="4dp" />

        <EditText
            android:id="@+id/editEventLocationName"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/location_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/col_on_secondary"
            android:textColorHighlight="@color/col_primary_variant"
            android:textColorHint="@color/col_on_secondary"
            android:textColorLink="@color/col_primary_variant"
            android:textSize="18dp"
            android:translationX="20dp"
            android:translationY="60dp" />

        <Button
            android:id="@+id/buttonGotoGeolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_geolocation"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:translationX="8dp"
            android:translationY="150dp">

            <include
                android:id="@+id/startDateTime"
                layout="@layout/date_time_buttons" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:translationX="8dp"
            android:translationY="210dp">

            <include
                android:id="@+id/endDateTime"
                layout="@layout/date_time_buttons" />

        </LinearLayout>


        <CheckBox
            android:id="@+id/checkEventRecurrence"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/col_primary_variant"
            android:text="@string/repeat_event"
            android:textColor="@color/col_on_secondary"
            android:textColorHighlight="@color/col_primary_variant"
            android:textColorLink="@color/col_primary_variant"
            android:textSize="18sp"
            android:translationX="120dp"
            android:translationY="320dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/recurrencePeriod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:visibility="gone">

            <TextView
                android:id="@+id/textRecurrencePeriod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/repeat_every" />

            <EditText
                android:id="@+id/editRecurrenceAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number"
                android:textAlignment="textEnd" />

            <Spinner
                android:id="@+id/spinnerRecurrencePeriodType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <include
            android:id="@+id/recurrenceUntil"
            layout="@layout/date_time_buttons"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBarEventCreatorLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/col_on_secondary"
            android:progressBackgroundTint="@color/col_on_secondary"
            android:progressTint="@color/col_on_secondary"
            android:translationX="8dp"
            android:translationY="385dp"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="330dp"
        android:layout_height="109dp"
        android:layout_marginBottom="35dp"
        android:ems="14"
        android:hint="@string/event_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/col_on_secondary"
        android:textColorHighlight="@color/col_primary_variant"
        android:textColorHint="@color/col_on_secondary"
        android:textColorLink="@color/col_primary_variant"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>